# rcdt_robotics

./: .clang-format  .clangd  .env  .env.example  .gitattributes  .gitignore  .gitmodules  .ignore  .personal.bashrc  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  attach  attach.sh  build  compose.py  conftest.py  docker-compose.yml  down.sh  doxyfile.lint  doxygen-lint.sh  doxygen.config  doxygen_check  entrypoint.sh  get_image_tag  launch_system.py  local_build  local_run  pyproject.toml  run  start.py  sync_stubs  up.sh
rcdt_description/src/rcdt_description/: CMakeLists.txt  package.xml
rcdt_gazebo/src/rcdt_gazebo/: CMakeLists.txt  package.xml
rcdt_gazebo/src/rcdt_gazebo/config/: controllers.yaml
rcdt_gazebo/src/rcdt_gazebo/env-hooks/: rcdt_gazebo.sh.in
rcdt_gazebo/src/rcdt_gazebo/launch/: gazebo.launch.py  gazebo_robot.launch.py
rcdt_gazebo/src/rcdt_gazebo/rcdt_gazebo/: create_sdf.py
rcdt_gazebo/src/rcdt_gazebo/src_py/: spawn_platforms.py
rcdt_gazebo/src/rcdt_gazebo/worlds/: empty.sdf  world.sdf
rcdt_husarion/src/: package.xml
rcdt_husarion/src/rcdt_husarion/: CMakeLists.txt  README.md  package.xml
rcdt_husarion/src/rcdt_husarion/config/: controllers.yaml  gamepad_mapping.yaml  slam_params.yaml  vizanti_config.json
rcdt_husarion/src/rcdt_husarion/launch/: controllers.launch.py  description.launch.py  husarion.launch.py  nav2.launch.py  utils.launch.py
rcdt_husarion/src/rcdt_husarion/rcdt_husarion/: vehicle.py
rcdt_husarion/src/rcdt_husarion/src_py/: waypoint_follower_controller.py
rcdt_husarion/src/rcdt_husarion/urdf/: panther.urdf.xacro
rcdt_moveit/src/rcdt_franka_moveit_config/: CMakeLists.txt
rcdt_moveit/src/rcdt_franka_moveit_config/config/: pilz_cartesian_limits.yaml
ros2_ws/src/rcdt_detection/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rcdt_detection/april/: april.yaml
ros2_ws/src/rcdt_detection/launch/: detect.launch.py  detection_services.launch.py  realsense.launch.py
ros2_ws/src/rcdt_detection/nodes/: define_centroid_node.py  filter_masks_node.py  get_bounding_box_2d_node.py  get_largest_contour_node.py  get_mask_properties.py  get_mean_hue_node.py  get_rectangle_factor_node.py  get_rgbd_from_topic_node.py  is_correct_hue_node.py  is_rectangle_shape_node.py  object_detection.py  point_from_pixel_node.py  pose_from_pixel_node.py  publish_image_node.py  publish_masks_node.py  segment_image_node.py  select_image_from_list_node.py  select_pick_location_node.py  split_rgbd_node.py
ros2_ws/src/rcdt_detection/rcdt_detection/: image_manipulation.py  mask_properties.py  object_detectors.py  segmentation.py
ros2_ws/src/rcdt_detection/src_py/: get_apriltag_centre_pixel.py  get_mask_properties.py  get_rgbd_from_topic.py  openvla.py  pose_from_pixel.py  publish_image.py  publish_masks.py  segment_image.py  select_image_from_list.py  select_pick_location.py  select_place_location.py  tmp.py
ros2_ws/src/rcdt_detection_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/rcdt_detection_msgs/msg/: PointList.msg
ros2_ws/src/rcdt_detection_msgs/srv/: ContourTo3D.srv  DefineCentroid.srv  DetectObjects.srv  FilterMasks.srv  GetBoundingBox2D.srv  GetLargestContour.srv  GetMaskProperties.srv  GetMeanHue.srv  GetRGBDFromTopic.srv  GetRectangleFactor.srv  IsCorrectHue.srv  IsRectangleShape.srv  PointFromPixel.srv  PoseFromPixel.srv  PublishImage.srv  SegmentImage.srv  SplitRGBD.srv
ros2_ws/src/rcdt_franka/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rcdt_franka/config/: controllers.yaml  gamepad_mapping.yaml  robot_controllers.yaml  servo_params.yaml  simulation_controllers.yaml
ros2_ws/src/rcdt_franka/include/: fr3_gripper_simulation.hpp  gripper.hpp  open_gripper.hpp
ros2_ws/src/rcdt_franka/launch/: calibration.launch.py  controllers.launch.py  core.launch.py  franka.launch.py  gripper_services.launch.py  robot.launch.py
ros2_ws/src/rcdt_franka/nodes/: close_gripper_node.py  franka_gripper_simulation_node.py  joy_to_gripper_node.py  open_gripper_node.py
ros2_ws/src/rcdt_franka/src/: fr3_gripper_simulation.cpp  gripper.cpp  open_gripper.cpp
ros2_ws/src/rcdt_franka/src_py/: calibrate.py  close_gripper.py  franka_gripper_simulation.py  joy_to_gripper.py  open_gripper.py  settings_setter.py
ros2_ws/src/rcdt_franka/test/: conftest.py  test_integration.py  utils.py
ros2_ws/src/rcdt_franka/urdf/: franka.urdf.xacro  franka_robot.urdf.xacro  franka_ros2_control.urdf.xacro
ros2_ws/src/rcdt_grasping/: CMakeLists.txt  demo.py  package.xml
ros2_ws/src/rcdt_grasping/launch/: grasping.launch.py
ros2_ws/src/rcdt_grasping/src_py/: generate_grasp.py  grasp_logic.py
ros2_ws/src/rcdt_gz_worlds/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rcdt_gz_worlds/launch/: table.launch.py  thermal.launch.py  world.launch.py
ros2_ws/src/rcdt_gz_worlds/worlds/: empty_camera.sdf  table_brick.sdf  table_with_1_brick.sdf  table_with_4_bricks.sdf  table_with_apriltag.sdf  thermal_camera.sdf
ros2_ws/src/rcdt_joystick/: CMakeLists.txt  package.xml
ros2_ws/src/rcdt_joystick/config/: gamepad_mapping.json  joy_topics.yaml
ros2_ws/src/rcdt_joystick/include/: button.hpp  joy_topic_manager.hpp
ros2_ws/src/rcdt_joystick/launch/: joystick.launch.py
ros2_ws/src/rcdt_joystick/src/: joy_topic_manager.cpp  node.cpp
ros2_ws/src/rcdt_joystick/src_py/: joy_to_gripper.py  joy_to_twist.py  joy_topic_manager.py
ros2_ws/src/rcdt_joystick/tests/: test_package.cpp
ros2_ws/src/rcdt_messages/: CMakeLists.txt
ros2_ws/src/rcdt_messages/action/: Sequence.action
ros2_ws/src/rcdt_messages/msg/: Grasp.msg
ros2_ws/src/rcdt_messages/srv/: GenerateGraspnetGrasp.srv  GetApriltagCentrePixel.srv  MoveJoint.srv  (+2 more)
ros2_ws/src/rcdt_mobile_manipulator/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rcdt_moveit/: CMakeLists.txt  package.xml
ros2_ws/src/rcdt_panther/: CMakeLists.txt
ros2_ws/src/rcdt_sensors/: CMakeLists.txt  package.xml
ros2_ws/src/rcdt_test/: CMakeLists.txt  package.xml
ros2_ws/src/rcdt_utilities/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rcdt_utilities_msgs/: CMakeLists.txt  package.xml
(+1105 files in other folders)
