# SPDX-FileCopyrightText: Alliander N. V.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "rcdt_robotics"
version = "0.1.0"
description = "RCDT_robotics"
environment = ".venv"
requires-python = "==3.12.*"
dependencies = [
    "argcomplete>=3.6.2",
    "catkin-pkg>=1.0.0",
    "click>=8.2.1",
    "distinctipy>=1.3.4",
    "empy==3.3.4",
    "flake8>=7.2.0",
    "flake8-pyproject>=1.2.3",
    "flask>=3.1.2",
    "inflection>=0.5.1",
    "lark>=1.2.2",
    "mashumaro>=3.16",
    "myst-parser>=4.0.1",
    "numpy<2.0",
    "pillow>=11.3.0",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pydoclint>=0.6.6",
    "pymongo>=4.14.1",
    "pyrealsense2>=2.56.5.9235",
    "pytest<8.4.0",
    "pytest-timeout>=2.4.0",
    "simplejpeg>=1.8.2",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-video>=0.4.1",
    "termcolor>=3.1.0",
    "tornado>=6.5.1",
    "transforms3d>=0.4.2",
    "waitress>=3.0.2",
    "pandas>=2.2.0",
    "trimesh>=4.8.2",
]

[dependency-groups]
dev = [
    "click>=8.2.1",
    "pydoclint>=0.6.6",
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
]
graspnet = [
    "graspnetpy",
    ]

[tool.uv.sources]
graspnetpy = { git = "https://github.com/alliander-opensource/graspnet-baseline" }

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["I", "F", "E", "W", "B", "N", "A", "C4", "PL", "Q000", "SIM", "ANN", "ARG", "ERA", "D", "DOC"]
ignore = ["E501", "ANN204", "ANN401", "D100", "D104", "PLR0917","PLR0914"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
timeout = 90
timeout_method = "thread"
norecursedirs = ["install", "build", "log",".venv",".cache"]

[tool.ty.environment]
extra-paths = [
    "/opt/ros/jazzy/lib/python3.12/site-packages/",
    "/home/rcdt/franka_ws/install/franka_msgs/lib/python3.12/site-packages/",
    "ros2_ws/install/rcdt_messages/lib/python3.12/site-packages/",
    "ros2_ws/src/rcdt_franka/",
    "ros2_ws/src/rcdt_panther/",
    "ros2_ws/src/rcdt_utilities/",
    "ros2_ws/src/rcdt_gazebo/",
    "/home/rcdt/dev_packages/install/ros2_numpy/lib/python3.12/site-packages/",
]

# Settings of pydoclint, also in flake8 to use in vscode:
[tool.flake8]
style = "google"
skip-checking-short-docstrings = false
allow-init-docstring = true
check-style-mismatch = true
select = "DOC"

[tool.pydoclint]
style = "google"
skip-checking-short-docstrings = false
allow-init-docstring = true
check-style-mismatch = true