<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
SPDX-FileCopyrightText: Alliander N. V.

SPDX-License-Identifier: Apache-2.0
-->

<package format="3">
  <name>rcdt_grasping</name>
  <version>0.1.0</version>
  <description>Package that contains functionality for grasping objects.</description>
  <maintainer email="researchcenter@alliander.com">RCDT</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rcdt_utilities</depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>